--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "@mapbox/mapbox-gl-geocoder": "^4.3.0",
     "@rails/webpacker": "^4.0.2",
     "bootstrap": "^4.3.1",
+    "flatpickr": "^4.5.7",
     "jquery": "^3.4.1",
     "mapbox-gl": "^0.54.0",
     "popper.js": "^1.15.0"
